add_executable(atomic_unittest Atomic_unittest.cc)
target_link_libraries(atomic_unittest mynet_base)
add_executable(blockingQueue_unittest BlockingQueue_unittest.cc)
target_link_libraries(blockingQueue_unittest mynet_base)
add_executable(blockingQueue_bench_test BlockingQueue_bench_test.cc)
target_link_libraries(blockingQueue_bench_test mynet_base)
add_executable(boundedblockingQueue_unittest BoundedBlockingQueue_unittest.cc)
target_link_libraries(boundedblockingQueue_unittest mynet_base)
add_executable(date_unittest Date_unittest.cc)
target_link_libraries(date_unittest mynet_base)

