add_executable(atomic_unittest Atomic_unittest.cc)
target_link_libraries(atomic_unittest mynet_base)
add_executable(blockingQueue_unittest BlockingQueue_unittest.cc)
target_link_libraries(blockingQueue_unittest mynet_base)
add_executable(blockingQueue_bench_test BlockingQueue_bench_test.cc)
target_link_libraries(blockingQueue_bench_test mynet_base)
add_executable(boundedblockingQueue_unittest BoundedBlockingQueue_unittest.cc)
target_link_libraries(boundedblockingQueue_unittest mynet_base)
add_executable(date_unittest Date_unittest.cc)
target_link_libraries(date_unittest mynet_base)
add_executable(fileutil_unittest FileUtil_test.cc)
target_link_libraries(fileutil_unittest mynet_base)
add_executable(LogFile_test LogFile_test.cc)
target_link_libraries(LogFile_test mynet_base)

if(BOOSTTEST_LIBRARY)
    add_executable(logstream_test LogStream_test.cc)
    target_link_libraries(logstream_test mynet_base boost_unit_test_framework)
    add_test(NAME logstream_test COMMAND logstream_test)
endif()

